--- a/style.css
+++ b/style.css
@@ -18,3 +18,28 @@ html {
     /* position: relative; */
     overflow: hidden;
 }
+
+.navigation {
+    height: 60rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    position: relative;
+}
+
+.navigation a {
+    font-family: "Righteous", cursive;
+    font-size: 6rem;
+    color: #525050;
+    letter-spacing: .2rem;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    text-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
+    transition: all .5s;
+}
+
+.navigation:hover a {
+    color: #888;
+}
