--- a/style.css
+++ b/style.css
@@ -77,3 +77,27 @@ html {
     width: 180rem;
     height: 180rem;
 }
+
+.navigation a:nth-child(1)::before {
+    background-color: #f94144;
+}
+
+.navigation a:nth-child(2)::before {
+    background-color: #f3722c;
+}
+
+.navigation a:nth-child(3)::before {
+    background-color: #f8961e;
+}
+
+.navigation a:nth-child(4)::before {
+    background-color: #f9c74f;
+}
+
+.navigation a:nth-child(5)::before {
+    background-color: #90be6d;
+}
+
+.navigation a:nth-child(6)::before {
+    background-color: #43aa8b;
+}
